--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@types/jquery": "^3.3.33",
+    "ng2-search-filter": "^0.5.1",
     "ng7-storage": "^1.1.1",
     "ngx-spinner": "^8.1.0",
     "rxjs": "~6.5.4",
