--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jquery": "^3.3.34",
     "ng2-search-filter": "^0.5.1",
     "ng7-storage": "^1.1.1",
+    "ngx-malihu-scrollbar": "^9.0.0",
     "ngx-spinner": "^8.1.0",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
