--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-malihu-scrollbar": "^9.0.0",
     "ngx-spinner": "^8.1.0",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
     "subsink": "^1.0.1",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
