--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@ng-select/ng-select": "^4.0.0",
     "@types/jquery": "^3.3.34",
+    "angular2-multiselect-dropdown": "^4.6.3",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
     "ng7-storage": "^1.1.1",
     "ngx-malihu-scrollbar": "^9.0.0",
+    "ngx-mat-select-search": "^2.2.0",
     "ngx-spinner": "^8.1.0",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
