--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.7",
+    "@angular/animations": "^9.1.9",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "^9.0.7",
     "@angular/compiler": "^9.0.7",
@@ -32,6 +32,7 @@
     "ngx-malihu-scrollbar": "^9.0.0",
     "ngx-mat-select-search": "^2.2.0",
     "ngx-spinner": "^8.1.0",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "subsink": "^1.0.1",
